UI updates and add new releases to homepage

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 asgiref==3.5.0
 autopep8==1.6.0
+beautifulsoup4==4.10.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
 Django==4.0.3
+html5lib==1.1
 idna==3.3
 psycopg2==2.9.3
 pycodestyle==2.8.0
 python-dotenv==0.20.0
 requests==2.27.1
+six==1.16.0
+soupsieve==2.3.1
+spotipy==2.19.0
 sqlparse==0.4.2
 toml==0.10.2
 urllib3==1.26.9
+webencodings==0.5.1
