--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 asgiref==3.5.0
 autopep8==1.6.0
-beautifulsoup4==4.10.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
+dj-database-url==0.5.0
 Django==4.0.3
-html5lib==1.1
+django-heroku==0.3.1
+gunicorn==20.1.0
 idna==3.3
 psycopg2==2.9.3
 pycodestyle==2.8.0
@@ -17,3 +18,4 @@ sqlparse==0.4.2
 toml==0.10.2
 urllib3==1.26.9
 webencodings==0.5.1
+whitenoise==6.0.0
